--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".FragmentMainActivity"
-            android:parentActivityName=".Home.HomeScreen"
-            android:label="Committee" />
-        <activity android:name=".HomeActivity" >
+            android:label="Committee"
+            android:parentActivityName=".Home.HomeScreen" />
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +23,7 @@
         <activity
             android:name=".Home.HomeScreen"
             android:label="@string/title_activity_home_screen" />
+        <activity android:name=".CreateCommittee"></activity>
     </application>
 
 </manifest>
