--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".TestActivity"
-            android:parentActivityName=".Home.HomeScreen"></activity>
-        <activity
-            android:name=".FragmentMainActivity"
-            android:label="Committee"
-            android:parentActivityName=".Home.HomeScreen" />
-        <activity android:name=".HomeActivity">
+        <activity android:name=".LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity"
+            android:label="Login"
+            android:parentActivityName=".LandingActivity"></activity>
+        <activity
+            android:name=".TestActivity"
+            android:parentActivityName=".Home.HomeScreen" />
+        <activity
+            android:name=".FragmentMainActivity"
+            android:label="Committee"
+            android:parentActivityName=".Home.HomeScreen" />
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".Home.HomeScreen"
             android:label="@string/title_activity_home_screen" />
-        <activity android:name=".CreateCommittee"></activity>
+        <activity android:name=".CreateCommittee" />
     </application>
 
 </manifest>
