--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity
-            android:name=".Authentication.RegisterActivity"
-            android:label="Register"/>
-        <activity android:name=".Authentication.LandingActivity">
+        <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Authentication.RegisterActivity"
+            android:label="Register" />
+        <activity android:name=".Authentication.LandingActivity"/>
         <activity
             android:name=".Authentication.LoginActivity"
             android:label="Login"
