--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,12 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +22,9 @@
             android:name=".Authentication.RegisterActivity"
             android:label="Register"
             android:parentActivityName=".Authentication.LandingActivity"/>
-        <activity android:name=".Authentication.LandingActivity"/>
+        <activity
+            android:name=".Authentication.LandingActivity"
+            />
         <activity
             android:name=".Authentication.LoginActivity"
             android:label="Login"
